思考了一下我的启动速度为什么会变慢